# mcp-marketing-google-ads

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
ads_mcp/: coordinator.py  server.py  session.py  utils.py
