[project]
name = "mcp-marketing-google-ads"
version = "0.1.0"
description = "Agent24 Marketing MCP — Google Ads (Search, Display, Performance Max)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.9",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-ads>=30.0.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-marketing-google-ads = "ads_mcp.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["ads_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
